# dev-fest-2026

./: .gitignore  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
.github/workflows/: nextjs.yml
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
app/[locale]/: layout.tsx  page.tsx
app/about/: page.tsx
app/agenda/: page.tsx
app/speakers/: page.tsx
app/venue/: page.tsx
docs/: accessibility-checklist.md  content-management.md  deploy.md  dev-fest.md
docs/plans/: 2026-03-02-dev-fest-static-export-implementation.md  2026-03-02-dev-fest-website-design.md  2026-03-10-about-page-screenshot-loop-design.md  2026-03-10-about-page-screenshot-loop.md  2026-03-10-agenda-page-screenshot-loop.md  2026-03-11-speakers-page-screenshot-loop.md  2026-03-11-venue-page-screenshot-loop.md  2026-07-24-devfest-guide-mascot-implementation.md
i18n/: request.ts  routing.ts
messages/: en.json  it.json
public/: CNAME  manifest.json  robots.txt  sw.js
scripts/: fetch-sessionize.mjs
scripts/lib/: sessionize-mapper.mjs
services/devfest-guide-api/: README.md  pyproject.toml  vercel.json
services/devfest-guide-api/api/: index.py
services/devfest-guide-api/data/: devfest-knowledge.json
services/devfest-guide-api/devfest_guide/: agent.py  config.py  knowledge.py  models.py  observability.py  rate_limit.py  service.py  web.py
services/devfest-guide-api/tests/: test_guide_api.py
src/content/: about.ts  features.ts  nav-links.ts  sessions.ts  speakers.ts  (+4 more)
test-results/: .last-run.json
(+42 files in other folders)
